fix: temporarily adjust body overflow issue when dialog is opened

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+// Arruma temporariamente o problema de overflow no body quando o dialog é aberto
+body.p-overflow-hidden {
+  padding-right: 32px; // Aproximadamente a largura da barra de rolagem
+}
